Fix: Linea blanca fuera de overflow. Problem: Al modificar el diseño de forma responsive, aparecía una linea blanca en el lado derecho por fuera del overflow, causando que el diseño responsive se viera mal, ademas de que provocaba que el circulo del menu hamburguesa se moviera a forma distinta del scroll. Solution: Los Label del Form tenian un style defectuoso, así que tuve que quitar todo el form para rediseñarlo, el estilo quedo mejor, y tambien se soluciono el problema. Bitacora del rey: 9-sep-2020 00:47

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -14,7 +14,7 @@
     .c-form {
         margin-left: -200px;
     }
-    .form {
+    .content-form {
         width: 85%;
         height: 100%;
     }
@@ -101,7 +101,7 @@
         align-items: center;
         margin-bottom: 20px;
     }
-    .form {
+    .content-form {
         width: 100%;
     }
     .titulo-form {
@@ -109,7 +109,7 @@
         align-items: center;
         justify-content: center;
     }
-    form {
+    #form {
         height: 70%;
     }
     .nombre-form {
@@ -208,10 +208,7 @@
     .titulo-form h3 {
         text-align: center;
     }
-    .lbl-form {
-        margin-left: 170px;
-    }
-    .lbl-mensaje {
-        margin-left: 170px;
+    #contacto {
+        height: 155vh;
     }
 }
